--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="content-selection">
+    <div class="content-section">
         <div class="media">
             <img class="rounded-circle account-img" src="{{ image_file }}" >
             <div class="media-body">
